--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,8 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.0'
+
+    compile 'com.github.frankiesardo:icepick:2.3.6'
+    provided 'com.github.frankiesardo:icepick-processor:2.3.6'
+
 }
