--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,8 @@ android {
 dependencies {
     compile 'com.android.support:appcompat-v7:21.0.0'
 
+    compile 'joda-time:joda-time:2.5'
+
     compile 'com.github.frankiesardo:icepick:2.3.6'
     provided 'com.github.frankiesardo:icepick-processor:2.3.6'
-
 }
